syntax = "proto3";
package elys.leveragelp;

import "gogoproto/gogo.proto";

option go_package = "github.com/elys-network/elys/x/leveragelp/types";

message Pool {
  uint64 ammPoolId = 1;
  string health = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool enabled = 3;
  bool closed = 4;
  string interest_rate = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string leveraged_lp_amount = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
